# pyspade

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  LICENSE-MIT  MANIFEST.in  PACKAGE_SUMMARY.md  PUBLISHING.md  README.md  pyproject.toml
examples/: basic.py
python/pyspade/: __init__.py  __init__.pyi
src/: lib.rs
