[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyspade"
version = "0.1.0"
description = "Fast 2D Delaunay triangulation library with constrained edges and mesh refinement"
readme = "README.md"
authors = [
    {name = "Vasilis Naserentin"}
]
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
keywords = ["triangulation", "delaunay", "mesh", "geometry", "computational-geometry", "cdt"]

[project.urls]
Homepage = "https://github.com/dtcc-platform/pyspade"
Documentation = "https://github.com/dtcc-platform/pyspade#readme"
Repository = "https://github.com/dtcc-platform/pyspade"
"Bug Tracker" = "https://github.com/dtcc-platform/pyspade/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyspade"
python-source = "python"
